# notifications

./: Cargo.toml
zomes/coordinator/notifications/: Cargo.toml
zomes/coordinator/notifications/src/: contact.rs  lib.rs  notificant_to_notifiers.rs
zomes/integrity/notifications/src/: lib.rs
