[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "zomes/integrity/notifications",
    "zomes/coordinator/notifications",
    #"zomes/integrity/profiles",
    #"zomes/coordinator/profiles",
]
resolver = "2"

[workspace.dependencies]
holochain = "0.3.0-beta-dev.40"
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.0-beta-dev.30", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", default-features = false }
